--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "parity-config-generator",
+  "name": "codechain-config-generator",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://paritytech.github.io/parity-config-generator",
+  "homepage": "AddPage",
   "devDependencies": {
     "babel-eslint": "^7.1.1",
     "react-scripts": "0.4.3",
@@ -27,9 +27,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "semistandard --verbose | snazzy",
-    "lint-fix": "semistandard --fix --verbose | snazzy",
-    "generate-data": "node scripts/generate-config-data.js",
-    "generate-docs": "node scripts/generate-config-docs.js"
+    "lint-fix": "semistandard --fix --verbose | snazzy"
   },
   "semistandard": {
     "parser": "babel-eslint"
